# bird_detection_pipeline

./: Dockerfile  README.md  ros_entrypoint.sh  test_locally.txt
bird_detection_app/: package.xml  setup.py
bird_detection_app/bird_detection_app/: __init__.py  bird_publisher.py
models/: config_infer_primary.txt  labels.txt
