<?xml version="1.0"?>
<package format="3">
  <name>bird_detection_app</name>
  <version>0.1.0</version>
  <description>Bird detection application using DeepStream and ROS 2</description>

  <maintainer email="genkin.sasha@gmail.com">AlexG</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
